# opendeck-magic-audio-control

./: Cargo.toml  LICENSE  README.md  refactor-checklist.md
.github/workflows/: ci.yml
assets/: manifest.json
assets/propertyInspector/: cycleAudioStream.html  volumeControl.html
src/: audio.rs  constants.rs  display.rs  icons.rs  main.rs  pipewire.rs  shared_state.rs  state.rs  volume_monitor.rs
src/actions/: cycle_audio_stream.rs  mod.rs  volume_control.rs
