[package]
name = "open-deck-audio-control"
version = "0.1.0"
edition = "2021"
authors = ["OpenDeck Audio Control"]
description = "OpenDeck plugin for cycling through audio streams via PipeWire"

[dependencies]
openaction = "2.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
simplelog = "0.12"

[[bin]]
name = "open-deck-audio-control"
path = "src/main.rs"
